Fixed text overflow

--- a/assets/css/qacard.css
+++ b/assets/css/qacard.css
@@ -68,6 +68,8 @@
     grid-column: 1;
     grid-row: 1;
 
+    overflow: hidden;
+
     opacity: 1;
     transition: opacity .8s ease-in-out, transform .4s ease-in-out;
 }
